cursor behind others - zindex fixing it

--- a/pixel.css
+++ b/pixel.css
@@ -53,6 +53,9 @@
   position: absolute;
   z-index: 1;
 }
+.pointer.others {
+  z-index: 2;
+}
 .painters, .loginButtons, .conf, .whiteboards {
   position: fixed;
   z-index: 2;
@@ -72,3 +75,4 @@ float: left;
 .painter-box{
   height: 32px;
 }
+
